welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:1: error: Missing closing brace `}' assumed here
def goAndGet() {
^Methods:19: error: 'while' expected but identifier found.
goAndGet();
^Methods:19: error: '(' expected but ';' found.
goAndGet();
          ^